adicionando funcionalidade de extrato | returnando mensagens personalizadas

--- a/cadastro_login.html
+++ b/cadastro_login.html
@@ -29,6 +29,7 @@
         <input type="email" id="emailLogin" placeholder="Email" required />
         <input type="password" id="senhaLogin" placeholder="Senha" required />
         <button>Login</button>
+        <div class="message" id="mensagemLogin"></div>
         <div class="switch">Não tem conta? <span id="toCadastro">Cadastre-se</span></div>
       </form>
 
@@ -40,6 +41,7 @@
         <input type="text" id="cpf" placeholder="CPF" required>
         <input type="text" id="telefone" name="telefone" placeholder="(11) 99999-9999" maxlength="15" required>
         <button type="submit">Cadastrar</button>
+        <div class="message" id="mensagemCadastro"></div>
         <div class="switch">Já tem conta? <span id="toLogin">Entrar</span></div>
       </form>
     </div>
