--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>O banco digital feito para o ambiente acadêmico</h2>
       <p>O CampusBank é uma plataforma criada para simular transações financeiras seguras e rápidas dentro do ambiente
         universitário. Um projeto que une aprendizado, tecnologia e inovação em um único sistema.</p>
-      <a href="cadastro_login.html" class="btn">Começar Agora</a>
+      <a href="cadastro_login.html" class="btn" id="btnHome">Começar Agora</a>
     </div>
     <div class="illustration">
       <img src="./assets/img/ChatGPT_Image_9_de_nov._de_2025__16_10_55-removebg-preview.png"
