--- a/home.html
+++ b/home.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CampusBank - Home</title>
   <link rel="stylesheet" href="./assets/css/home.css">
 </head>
+
 <body>
 
-  <button class="back-btn" onclick="window.location.href='index.html'">← Voltar</button>
+  <button class="back-btn" id="logout">Sair</button>
 
   <!-- Painel -->
   <div class="container">
@@ -48,33 +50,14 @@
     <!--Extrato-->
     <div class="right">
       <h3>Últimas movimentações</h3>
+      <div id="lista-transacoes"></div>
 
-      <div class="transaction">
-        <div>
-          <p>Transferência recebida</p>
-          <small>Ontem • 14:22</small>
-        </div>
-        <span class="value positive">+R$ 250,00</span>
-      </div>
 
-      <div class="transaction">
-        <div>
-          <p>Pagamento Pix</p>
-          <small>Hoje • 10:11</small>
-        </div>
-        <span class="value negative">-R$ 50,00</span>
-      </div>
-
-      <div class="transaction">
-        <div>
-          <p>Recarga celular</p>
-          <small>Hoje • 08:47</small>
-        </div>
-        <span class="value negative">-R$ 120,00</span>
-      </div>
-
-      <button class="report-btn"><a href="criarDenuncias.html">🚨 Denunciar transação</a></button>
+      <button class="report-btn">
+        <a href="criarDenuncias.html">🚨 Denunciar transação</a>
+      </button>
     </div>
+  </div>
   </div>
 
   <div class="footer">
@@ -84,4 +67,5 @@
   <script src="assets/js/home.js"></script>
 
 </body>
+
 </html>
