--- a/pix.html
+++ b/pix.html
@@ -25,6 +25,7 @@
     <h2>Enviar PIX</h2>
 
     <h2 id="nomeReceiver"></h2>
+    <p id="scoreReceiver"></p>
     <input type="number" id="valor" placeholder="Digite o valor (R$)">
     <button onclick="enviarPix()">📤 Enviar</button>
 
