--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
   
   <header><i class="fa-solid fa-shield-halved"></i> Área Administrativa - CampusBank</header>
   <a href="index.html" class="back-btn">← Voltar</a>
+  <button class="back-bttn" id="logout">Sair</button>
 
   <div class="container">
     <h2><i class="fa-solid fa-file-circle-exclamation"></i> Lista de Denúncias</h2>
