--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
   <!-- Painel -->
   <div class="container">
     <div class="left">
-      <h2 id="usuario">Bem-vindo, Ana Costa</h2>
+      <h2 id="usuario"></h2>
       <h2>Seu saldo disponível</h2>
 
-      <div class="balance" id="saldo">R$ 1.110,00</div>
+      <div class="balance" id="saldo"></div>
       <button id="toggleSaldo">👁️ Ocultar saldo</button>
 
       <div>
